syntax = "proto3";

package geo;

service Geo {
  // Obtains the Locations contained within the given Rectangle.
  rpc BoundedBox(Args) returns (Reply);
}

// A latitude-longitude bounding box, represented as two diagonally opposite
// points "lo" and "hi".
message Args {
  string traceId = 1;
  Rectangle rect = 2;
}

message Rectangle {
  Point lo = 2;
  Point hi = 3;
}

// Points are represented as latitude-longitude pairs in the E7 representation
// (degrees multiplied by 10**7 and rounded to the nearest integer).
// Latitudes should be in the range +/- 90 degrees and longitude should be in
// the range +/- 180 degrees (inclusive).
message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message Reply {
  repeated int32 hotelIds = 1;
}
